# ouroboros-milestones

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
example-00/: CMakeLists.txt
example-00/src/: CMakeLists.txt
example-01/src/: CMakeLists.txt
example-02/src/: CMakeLists.txt
example-03/src/: CMakeLists.txt
milestone-00/scripts/: luatalker.lua  pythontalker.py
milestone-00/src/: CMakeLists.txt  main.cxx
milestone-01/scripts/: luatalker.lua  pythontalker.py
milestone-01/src/: CMakeLists.txt
milestone-02/scripts/: luatalker.lua  pythontalker.py
milestone-02/src/: CMakeLists.txt
milestone-03/: CMakeLists.txt
milestone-03/scripts/: luatalker.lua  pythontalker.py
milestone-03/src/: CMakeLists.txt  main.cxx
milestone-05/scripts/: luatalker.lua  pythontalker.py
milestone-05/src/: CMakeLists.txt  info.cxx  info.h  input.cxx  input.h  main.cxx  out.cxx  out.h
milestone-06/scripts/: luasample.lua
milestone-06/src/: CMakeLists.txt  main.cxx
src/: .gitignore  CMakeLists.txt
src/example-00/: CMakeLists.txt
src/milestone-00/: CMakeCache.txt
